[gd_scene load_steps=4 format=3 uid="uid://cop8ckecfyxli"]

[ext_resource type="PackedScene" uid="uid://ubyatap3sylf" path="res://src/Tools/BaseDraw.tscn" id="1_a3u7o"]
[ext_resource type="Script" uid="uid://8bbs5tywj2ya" path="res://src/Tools/DesignTools/IsometricBox.gd" id="2_g8u0x"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://src/UI/Nodes/Sliders/ValueSlider.tscn" id="3_xw18e"]

[node name="ToolOptions" instance=ExtResource("1_a3u7o")]
script = ExtResource("2_g8u0x")

[node name="ThicknessSlider" parent="." index="2" instance=ExtResource("3_xw18e")]
layout_mode = 2
min_value = 1.0
value = 1.0
prefix = "Size:"
suffix = "px"
global_increment_action = "brush_size_increment"
global_decrement_action = "brush_size_decrement"

[node name="BezierOptions" type="HBoxContainer" parent="." index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="BezierOptions" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mode:"

[node name="BezierMode" type="OptionButton" parent="BezierOptions" index="1"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Chained: Makes a chain of multiple bezier curves, similar to Krita's curve tool.
Single: Makes a single bezier curve, similar to Aseprite's curve tool."
mouse_default_cursor_shape = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Chained"
popup/item_0/id = 0
popup/item_1/text = "Single"
popup/item_1/id = 1

[node name="FillCheckbox" type="CheckBox" parent="." index="4"]
layout_mode = 2
tooltip_text = "Fills the drawn shape with color, instead of drawing a hollow shape"
mouse_default_cursor_shape = 2
text = "Fill Shape"

[node name="Brush" parent="." index="5"]
visible = false

[node name="DoubleClickTimer" type="Timer" parent="." index="8"]
wait_time = 0.2
one_shot = true

[connection signal="value_changed" from="ThicknessSlider" to="." method="_on_thickness_value_changed"]
[connection signal="item_selected" from="BezierOptions/BezierMode" to="." method="_on_bezier_mode_item_selected"]
[connection signal="toggled" from="FillCheckbox" to="." method="_on_fill_checkbox_toggled"]
